Agent - fanuc iSeries/Distribution/30iHSSB/Fwlib32.h


typedef struct odbtlife1 {
    short   dummy ; 
    short   type ;  
    long    data ;  
} ODBTLIFE1 ;
typedef struct odbtlife2 {
    short   dummy[2] ;  
    long    data ;      
} ODBTLIFE2 ;
typedef struct odbtlife3 {
    short   datano ;    
    short   dummy ;     
    long    data ;      
} ODBTLIFE3 ;
typedef struct odbtlife4 {
    short   datano ;    
    short   type ;      
    long    data ;      
} ODBTLIFE4 ;
typedef struct odbtlife5 {
    long    dummy ; 
    long    type ;  
    long    data ;  
} ODBTLIFE5 ;
typedef struct iodbtr {
    short   datano_s ;  
    short   dummy ;     
    short   datano_e ;  
    struct {
        long    ntool ;     
        long    life ;      
        long    count ;     
    } data[5] ;
} IODBTR ;  
typedef struct odbtg {
    short   grp_num ;   
    short   dummy[2] ;  
    long    ntool ;     
    long    life ;      
    long    count ;     
    struct {
        long    tuse_num ;      
        long    tool_num ;      
        long    length_num ;    
        long    radius_num ;    
        long    tinfo ;         
    } data[5] ;
} ODBTG ;   
typedef struct idbwrc {
    short   datano_s ;  
    short   dummy ;     
    short   datano_e ;  
    struct {
        long    dummy[2] ;  
        long    count ;     
    } data[5] ;
} IDBWRC ;  
typedef struct odbusegr {
    short   datano; 
    short   type;   
    long    next;   
    long    use;    
    long    slct;   
} ODBUSEGR;
typedef struct odblfno {
    short   datano; 
    short   type;   
    short   data;   
} ODBLFNO;
typedef struct odbtluse {
    short   s_grp;      
    short   dummy;      
    short   e_grp;      
    long    data[5];    
} ODBTLUSE; 
typedef struct iodbtd {
    short   datano;     
    short   type;       
    long    tool_num;   
    long    h_code;     
    long    d_code;     
    long    tool_inf;   
} IODBTD;
typedef struct iodbtd2 {
    short   datano;     
    short   dummy;      
    long    type;       
    long    tool_num;   
    long    h_code;     
    long    d_code;     
    long    tool_inf;   
} IODBTD2;
typedef struct iodbtgi {
    short   s_grp;  
    short   dummy;  
    short   e_grp;  
    struct {
        long    n_tool;         
        long    count_value;    
        long    counter;        
        long    count_type;     
    } data[5];
} IODBTGI;  
typedef struct iodbtgi2 {
    short   s_grp;              
    short   dummy;              
    short   e_grp;              
    long    opt_grpno[5];       
} IODBTGI2;  
typedef struct iodbtgi3 {
    short   s_grp;              
    short   dummy;              
    short   e_grp;              
    long    life_rest[5];       
} IODBTGI3;  
typedef struct idbitd {
    short   datano; 
    short   type;   
    long    data;   
} IDBITD;
typedef struct odbhis {
    unsigned short  s_no;   
    short   type;           
    unsigned short  e_no;   
    union {
        struct {
            short   rec_type;   
            short   alm_grp;    
            short   alm_no;     
            char    axis_no;    
            char    dummy;
        } rec_alm;
        struct {
            short   rec_type;   
            char    key_code;   
            char    pw_flag;    
            char    dummy[4];
        } rec_mdi;
        struct {
            short   rec_type;   
            char    sig_name;   
            char    sig_old;    
            char    sig_new;    
            char    dummy;
            short   sig_no;     
        } rec_sgn;
        struct {
            short   rec_type;   
            char    year;       
            char    month;      
            char    day;        
            char    pw_flag;    
            char    dummy[2];
        } rec_date;
        struct {
            short   rec_type;   
            char    hour;       
            char    minute;     
            char    second;     
            char    pw_flag;    
            char    dummy[2];
        } rec_time;
    } data[10];
} ODBHIS;   
typedef	struct  iodbint {
	short   datano_s;	
	short   type;		
	short   datano_e;	
	long	data[24];	
} IODBINT ;
typedef struct iodbwcsf {
     short	datano;         
     short	type;           
     long	data[MAX_AXIS]; 
} IODBWCSF;
typedef	struct	iodbbto {
	short datano_s;		
	short type;		
	short datano_e;		
	long  ofs[18];		
} IODBBTO ;	
typedef	struct  odbbtlinf {
	short	ofs_type;	
	short	use_no;		
	short	sub_no;		
} ODBBTLINF ;
typedef struct odbbaxis {
	short		flag ;        
	short		command ;     
	unsigned short	speed ;       
	long		sub_data ;    
} ODBBAXIS ;
typedef struct iodbhpst {
    short       slct ;
    short       hpcc ;
    short       multi ;
    short       ovr1 ;
    short       ign_f ;
    short       foward ;
    long        max_f ;
    short       ovr2 ;
    short       ovr3 ;
    short       ovr4 ;
    long        reserve[7] ;
} IODBHPST ;
typedef struct iodbhppr {
    struct {
        short   slct ;
        short   diff ;
        short   fine ;
        short   acc_lv ;
        long    max_f ;
        short   bipl ;
        short   aipl ;
        long    corner ;
        short   clamp ;
        long    radius ;
        long    max_cf ;
        long    min_cf ;
        long    foward ;
        long    reserve[5] ;
    }tune[3] ;
} IODBHPPR ;
typedef struct iodbhpac {
    struct {
        short   slct ;
        short   diff ;
        short   fine ;
        short   acc_lv ;
        long    bipl ;
        short   aipl ;
        long    corner ;
        long    clamp ;
        long    c_acc ;
        long    foward ;
        long    reserve[8] ;
    }tune[3] ;
} IODBHPAC ;
FWLIBAPI short WINAPI cnc_rdgrpid( unsigned short, short, ODBTLIFE1 * ) ;
FWLIBAPI short WINAPI cnc_rdngrp( unsigned short, ODBTLIFE2 * ) ;
FWLIBAPI short WINAPI cnc_rdntool( unsigned short, short, ODBTLIFE3 * ) ;
FWLIBAPI short WINAPI cnc_rdlife( unsigned short, short, ODBTLIFE3 * ) ;
FWLIBAPI short WINAPI cnc_rdcount( unsigned short, short, ODBTLIFE3 * ) ;
FWLIBAPI short WINAPI cnc_rd1length( unsigned short, short, short, ODBTLIFE4 * ) ;
FWLIBAPI short WINAPI cnc_rd2length( unsigned short, short, short, ODBTLIFE4 * ) ;
FWLIBAPI short WINAPI cnc_rd1radius( unsigned short, short, short, ODBTLIFE4 * ) ;
FWLIBAPI short WINAPI cnc_rd2radius( unsigned short, short, short, ODBTLIFE4 * ) ;
FWLIBAPI short WINAPI cnc_t1info( unsigned short, short, short, ODBTLIFE4 * ) ;
FWLIBAPI short WINAPI cnc_t2info( unsigned short, short, short, ODBTLIFE4 * ) ;
FWLIBAPI short WINAPI cnc_toolnum( unsigned short, short, short, ODBTLIFE4 * ) ;
FWLIBAPI short WINAPI cnc_rdtoolrng( unsigned short, short, short, short, IODBTR * ) ;
FWLIBAPI short WINAPI cnc_rdtoolgrp( unsigned short, short, short, ODBTG * ) ;
FWLIBAPI short WINAPI cnc_wrcountr( unsigned short, short, IDBWRC * ) ;
FWLIBAPI short WINAPI cnc_rdusegrpid( unsigned short, ODBUSEGR * ) ;
FWLIBAPI short WINAPI cnc_rdmaxgrp( unsigned short, ODBLFNO * ) ;
FWLIBAPI short WINAPI cnc_rdmaxtool( unsigned short, ODBLFNO * ) ;
FWLIBAPI short WINAPI cnc_rdusetlno( unsigned short, short, short, short, ODBTLUSE * ) ;
FWLIBAPI short WINAPI cnc_rd1tlifedata( unsigned short, short, short, IODBTD * ) ;
FWLIBAPI short WINAPI cnc_rd2tlifedata( unsigned short, short, short, IODBTD * ) ;
FWLIBAPI short WINAPI cnc_wr1tlifedata( unsigned short, IODBTD * ) ;
FWLIBAPI short WINAPI cnc_wr2tlifedata( unsigned short, IODBTD * ) ;
FWLIBAPI short WINAPI cnc_rdgrpinfo( unsigned short, short, short, short, IODBTGI * ) ;
FWLIBAPI short WINAPI cnc_wrgrpinfo( unsigned short, short, IODBTGI * ) ;
FWLIBAPI short WINAPI cnc_instlifedt( unsigned short, IDBITD * ) ;
FWLIBAPI short WINAPI cnc_rdgrpid2( unsigned short, long, ODBTLIFE5 * ) ;
FWLIBAPI short WINAPI cnc_rd1tlifedat2( unsigned short, short, long, IODBTD2 * ) ;
FWLIBAPI short WINAPI cnc_wr1tlifedat2( unsigned short, IODBTD2 * ) ;
FWLIBAPI short WINAPI cnc_rdophistry( unsigned short, unsigned short, unsigned short, unsigned short, ODBHIS * ) ;
FWLIBAPI short WINAPI cnc_rdintchk( unsigned short, short, short, short, short, IODBINT * ) ;
FWLIBAPI short WINAPI cnc_wrintchk( unsigned short, short, IODBINT * ) ;
FWLIBAPI short WINAPI cnc_rdintinfo( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_rdwkcdshft( unsigned short, short, short, IODBWCSF * ) ;
FWLIBAPI short WINAPI cnc_wrwkcdshft( unsigned short, short, IODBWCSF * ) ;
FWLIBAPI short WINAPI cnc_rdwkcdsfms( unsigned short, short, short, IODBWCSF * ) ;
FWLIBAPI short WINAPI cnc_wrwkcdsfms( unsigned short, short, IODBWCSF * ) ;
FWLIBAPI short WINAPI cnc_rdbtofsr( unsigned short, short, short, short, short, IODBBTO * ) ;
FWLIBAPI short WINAPI cnc_wrbtofsr( unsigned short, short, IODBBTO * ) ;
FWLIBAPI short WINAPI cnc_rdbtofsinfo( unsigned short, ODBBTLINF * ) ;
FWLIBAPI short WINAPI cnc_rdbaxis( unsigned short, ODBBAXIS * ) ;
FWLIBAPI short WINAPI cnc_rdhpccset( unsigned short, IODBHPST * ) ;
FWLIBAPI short WINAPI cnc_wrhpccset( unsigned short, IODBHPST * ) ;
FWLIBAPI short WINAPI cnc_rdhpcctupr( unsigned short, IODBHPPR * ) ;
FWLIBAPI short WINAPI cnc_wrhpcctupr( unsigned short, IODBHPPR * ) ;
FWLIBAPI short WINAPI cnc_rdhpcctuac( unsigned short, IODBHPAC * ) ;
FWLIBAPI short WINAPI cnc_wrhpcctuac( unsigned short, IODBHPAC * ) ;